--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<h1>"Why i want to become a developer?"</h1>
+	<p>i want to become developer because this role has high
+		growth rate and its very intresting and it has more scope and it will
+	improve my IQ levels and no one can replace developers</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
