--- a/main.html
+++ b/main.html
@@ -8,9 +8,7 @@
 
 <body>
 	<h1>Why i want to become a developer?</h1>
-	<p>i want to become developer because this role has high
-		growth rate and its very intresting and it has more scope and it will
-	improve my IQ levels and no one can replace developers</p>
+	<p>i want to become developer because this role has high growth rate and i am very intrested</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
