--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Why i want to become a developer?</h1>
-	<p>i want to become developer because this role has high growth rate and i am very intrested</p>
+	<p>i want to become software developer because because i am intrested to solve real world products</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
