--- a/main.html
+++ b/main.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<h1>Why i want to become a developer?</h1>
-	<p>i want to become software developer because because i am intrested to solve real world products</p>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Why I want to become a developer?</h1>
+    <p>I want to become a software developer because I am interested in solving real-world problems.</p>
 </body>
-
 </html>
